--- a/gb/21/1/25/n12709517.md
+++ b/gb/21/1/25/n12709517.md
@@ -1,66 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/faflev3861/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/faflev3861/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/faflev3861/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/faflev3861/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/faflev3861/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2021年南澳非公立学校限制学费涨幅</h2>
-
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/01/prince-alfred-600x334.jpg" />
+<h6>南澳多数私立学校和天主教学校将2021年学费涨幅控制在最低水平。图为阿德莱德著名私立学校阿尔弗莱德王子学院（Prince Alfred College）。（戴宁／大纪元）
+</h6>
 <hr>
-<p>【大纪元2021年01月25日讯】（大纪元记者方君华澳洲阿德莱德编译报导）由于<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>冲击给家庭经济收入造成负担，南澳多数<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E7%A7%81%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">私立学校</a>和<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E5%A4%A9%E4%B8%BB%E6%95%99%E5%AD%A6%E6%A0%A1.md#1">天主教学校</a>将2021年<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E5%AD%A6%E8%B4%B9.md#1">学费</a><ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E6%B6%A8%E5%B9%85.md#1">涨幅</a>控制在最低水平。</p>
-<p>据《广告人报》（The Advertiser）报导，一项针对可提供12年级课程的100所学校的调查显示，最昂贵的几所学校的<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E5%AD%A6%E8%B4%B9.md#1">学费</a>处于相近的区间，每年2.5万至2.8万澳元。大多数<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E7%A7%81%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">私立学校</a>的学费在每年5千到1万5千澳元之间。</p>
-<p>南澳独立学校协会（AISSA）和南澳天主教教育协会（CESA）表示，学校正在限制学费上涨，平均<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E6%B6%A8%E5%B9%85.md#1">涨幅</a>控制在1％以内。</p>
-<p>南澳独立学校协会首席执行官格兰兹康斯（Carolyn Grantskalns）说：“学校非常清楚，过去的一年让一些家庭财务面临挑战，学校在确定费用时考虑到这一点。”“但是，学校的确面临成本增加的问题，包括员工工资的增加和保险费增加，以及由病毒<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>导致的额外费用，例如清洁费用的大幅增加。”</p>
+<p>【大纪元2021年01月25日讯】（大纪元记者方君华澳洲阿德莱德编译报导）由于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>冲击给家庭经济收入造成负担，南澳多数<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%81%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">私立学校</a>和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A9%E4%B8%BB%E6%95%99%E5%AD%A6%E6%A0%A1.md#1">天主教学校</a>将2021年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AD%A6%E8%B4%B9.md#1">学费</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B6%A8%E5%B9%85.md#1">涨幅</a>控制在最低水平。</p>
+<p>据《广告人报》（The Advertiser）报导，一项针对可提供12年级课程的100所学校的调查显示，最昂贵的几所学校的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AD%A6%E8%B4%B9.md#1">学费</a>处于相近的区间，每年2.5万至2.8万澳元。大多数<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%81%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">私立学校</a>的学费在每年5千到1万5千澳元之间。</p>
+<p>南澳独立学校协会（AISSA）和南澳天主教教育协会（CESA）表示，学校正在限制学费上涨，平均<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B6%A8%E5%B9%85.md#1">涨幅</a>控制在1％以内。</p>
+<p>南澳独立学校协会首席执行官格兰兹康斯（Carolyn Grantskalns）说：“学校非常清楚，过去的一年让一些家庭财务面临挑战，学校在确定费用时考虑到这一点。”“但是，学校的确面临成本增加的问题，包括员工工资的增加和保险费增加，以及由病毒<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>导致的额外费用，例如清洁费用的大幅增加。”</p>
 <p>“矛盾的是，有些学校需要增加学费，以便为那些致力于让孩子入学、却又无法在2021年支付全额学费的家庭提供助学金和学费减免。”“没有哪个学校希望迫切想让孩子留校的家庭做出离校这样令人心痛的决定。”</p>
 <p>南澳天主教教育协会已要求其所有成员“有意义地减少费用”，并已着手一项控制费用的三年计划。其协会主席拉尔夫（Denis Ralph）说：“本协会敏锐地意识到，有必要确保高质??量的（教学）成果，并继续支持那些因疫情受影响的家庭。”“本协会致力于为所有入学家庭，或考虑接受天主教教育的家庭，提供更多的机会和负担能力。”</p>
 <p>今年大多数天主教小学将大幅降低学费，中学学费从现在起或以后开始降低。</p>
 <p>责任编辑：陈紫雨</p>
-<p><strong>了解更多澳洲即时要闻及生活资讯，请点击</strong><ahref="https://github.com/faflev3861/djy/blob/master/gb/ncid1161841.md#1"><strong>dajiyuan.com.au</strong></a><br />
+<p><strong>了解更多澳洲即时要闻及生活资讯，请点击</strong><ahref="https://github.com/eizauy3553/djy/blob/master/gb/ncid1161841.md#1"><strong>dajiyuan.com.au</strong></a><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/17/1/11/n8693952.md#1">阿德雷德精英女校学费涨幅最高</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/17/1/19/n8719334.md#1">学费调查：阿德雷德孩子一生私校学费近40万</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/17/4/25/n9073615.md#1">南澳部分公校学费逾千元 有违公共教育免费理念</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/18/3/22/n10239346.md#1">澳教育改革致学费大涨 天主教学校入学降</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/19/2/13/n11040786.md#1">南澳私立中学和中小联校学费增长高于外州</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/19/9/19/n11531121.md#1">师生比例对比 南澳公私教会学校差别不大</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/20/2/26/n11896308.md#1">应对旅行禁令 阿大为中国留学生提供数千元优惠</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/20/4/1/n11994027.md#1">受疫情冲击 南澳高校学生要求简化评分减少学费</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12707959.md#1">阿德莱德挂牌量锐减 中介求房上市</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/19/n12696949.md#1">澳国庆节前 南澳或放宽对新州边境限制</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/11/n8693952.md#1">阿德雷德精英女校学费涨幅最高</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/19/n8719334.md#1">学费调查：阿德雷德孩子一生私校学费近40万</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/25/n9073615.md#1">南澳部分公校学费逾千元 有违公共教育免费理念</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/22/n10239346.md#1">澳教育改革致学费大涨 天主教学校入学降</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/2/13/n11040786.md#1">南澳私立中学和中小联校学费增长高于外州</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/19/n11531121.md#1">师生比例对比 南澳公私教会学校差别不大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/2/26/n11896308.md#1">应对旅行禁令 阿大为中国留学生提供数千元优惠</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/1/n11994027.md#1">受疫情冲击 南澳高校学生要求简化评分减少学费</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680514.md#1">阿市高中成为南澳第四所因疫情关闭的学校</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680369.md#1">南澳新内阁亮相 独立议员意外入选</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/1/n10885699.md#1" target="_blank">陆文：生与死的抉择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">留守女孩的命运转变</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/1/n11356564.md#1" target="_blank">共产暴政录：三区叛乱和侵华日军攻势协调进行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706868.md#1">2021预测：全球瘟疫更具毁灭性 善恶大决战</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12707590.md#1">史前文明：地球上真的生活着三种人？</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/8/n12675378.md#1">二岁童天天礼佛打坐说前生 总统转生人人争睹</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706824.md#1">【西岸观察】不忍士兵睡车库 川普开放自家宾馆</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706729.md#1">车评：高气压的蓝天 2021 Mazda3 2.5 Turbo</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12708082.md#1">【新闻看点】武汉封城周年 上海再现随地倒</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706824.md#1">【西岸观察】不忍士兵睡车库 川普开放自家宾馆</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706720.md#1">【唐青看时事】习近平五军压境 拜登蒙在鼓里？</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12706233.md#1">霍建华拍完《如懿传》后便沉寂？导演爆秘辛</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12705064.md#1">法比欧当台湾女婿 示范拿手菜满足未婚妻的胃</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/21/n12703721.md#1">撑警陈百祥违反限聚令 5千港人联署促警严查</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12706385.md#1">章子怡首拍剧穿帮？古装裙下露出精品运动鞋</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/21/n12703464.md#1">梁朝伟与章子怡再同框 台上互喊戏中名字</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12704952.md#1">2021年1月21日很特殊 百年一遇</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12704480.md#1">大批人感染后 病毒就会消失？群体免疫3大疑虑</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12706342.md#1">8大穴位抗病毒 一个方法比穴位按摩更好</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/24/n12708389.md#1">加拿大女子梦游 丈夫拍下爆笑画面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/12/n8091804.md#1">【传奇】赵匡胤千里送京娘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/15/n12812584.md#1">罗马时代迫害基督徒 今生仍在偿还业债</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/23/n12829555.md#1">中共病毒（新冠病毒）的变异现灵性</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/11/n12804755.md#1">“后庭花”为什么是亡国之音的代称？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12837707.md#1">【传奇大观】天仙失言落凡尘 恋久生情再沉沦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/30/n12844511.md#1">【探索时分】台湾F16V升级 台海新战机来袭</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844409.md#1">【横河直播】世卫报告替中共甩锅 利益冲突遭疑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844230.md#1">【时事纵横】小粉红抵制完败？中捷牵线人坠机亡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/22/n12826574.md#1">不想花钱换手机？五招改善你的手机速度</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/27/n12839676.md#1">【名家专栏】攻击美国 中共欲重新定义人权</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841466.md#1">抵制声浪下 耐克、阿迪达斯产品仍遭哄抢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841758.md#1">“战狼”吴京用iPhone发文 遭网民嘲讽</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841453.md#1">香港金牌绿叶廖启智罹癌离世 享年66岁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844152.md#1">三个月6位港星离世 廖启智抗癌细节曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840451.md#1">宋柏纬胞姊现身餐车 黄秋生夸气质：全台最美</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840534.md#1">韩国名编剧金银淑新戏开播 男主角撞脸孔刘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840638.md#1">台湾福卫五号拍到 苏伊士运河“大排长荣”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840882.md#1">美国男子离职 老板竟以9万多个硬币付薪水</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12838700.md#1">减肥身体亮红灯 营养师：我正常吃三餐 瘦到48公斤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840728.md#1">泰贫女在海螺发现珍珠 罹癌母亲医药费有望</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12842315.md#1">泰国小偷行窃时竟然睡着 被警察叫醒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/faflev3861/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/faflev3861/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/25/n12709517.htm">2021年南澳非公立学校限制学费涨幅</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/25/n12709517.htm">2021年南澳非公立学校限制学费涨幅</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/faflev3861/djy/blob/master/gb/21/1/25/n12709517.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/faflev3861/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/faflev3861/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/faflev3861/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/1/25/n12709517.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
